<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- 基本情報 -->
    <string name="app_name">DataPocket</string>
    <string name="team_name">sakaboricklink</string>
    <string name="image">画像</string>
    
    <!-- ActionBar用 -->
	<string name="add">追加</string>
	<string name="save">保存</string>
	<string name="custom">編集</string>
	
	<!-- ジャンル追加画面用 -->
	<string name="genre_setting_title">基本情報</string>
	<string name="title">タイトル</string>
	<string name="title_image">タイトル画像</string>
	<string name="data_description">データ説明</string>
    <string name="genre_setting_title_hint">タイトルを入力してください。</string>
    <string name="genre_setting_description_hint">説明内容を入力してください。</string>

    <!-- リスト追加画面 -->
    <string name="list_setting_title">リスト情報</string>
    <string name="list_setting_title_hint">タイトルを入力してください。</string>
    <string name="list_setting_descripton_hint">説明内容を入力してください。</string>

    <!-- カスタムオール画面 -->
    <string name="custom_all_genre_title">ジャンル</string>
    <string name="custom_all_list_title">リスト</string>
    <string name="custom_all_detail_title">詳細ページ</string>
    <string name="background_selection">背景選択</string>
    <string name="background_image">背景画像</string>
    <string name="background_color">背景色</string>
    <string name="divider_line">区切り線</string>

</resources>
