<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    android:layout_gravity="center_horizontal" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:background="@drawable/custom_window"
    android:orientation="vertical" >
    
    <!-- ◼︎基本情報 -->
    <TextView
        style="@style/activity_add_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="10dp"
        android:text="@string/genre_setting_title"
        android:textSize="@dimen/default_size"/>

    <View style="@style/divider"/>
    
    <!-- タイトル -->
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="5dp"
        android:text="@string/title"
        android:textSize="@dimen/default_size"/>
    
    <!-- タイトル入力部 -->
    <EditText
        android:id="@+id/genreTitleAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="5dp">

    </EditText>

    <View style="@style/divider"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        
        <!-- タイトル画像(タイトル） -->
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/title_image"
            android:textSize="@dimen/default_size"/>
        
        <!-- タイトル画像（画像） -->
        <ImageView android:id="@+id/genreImageAdd"
                   style="@style/imageBox"/>

    </RelativeLayout>

    <View style="@style/divider"/>

    <!-- データ説明 -->
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="5dp"
        android:text="@string/data_description"
        android:textSize="@dimen/default_size"/>
    
    <!-- データ説明入力部 -->
    <EditText
        android:id="@+id/genreDataDescriptionAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="#EEEEEE"
        android:inputType="textMultiLine">
    </EditText>

</LinearLayout>
</ScrollView>
